--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 asgiref==3.3.1
+attrs==20.3.0
 Django==3.1.4
+importlib-metadata==3.3.0
+iniconfig==1.1.1
+packaging==20.8
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
+pytest==6.2.1
+pytest-django==4.1.0
+pytest-mock==3.4.0
 pytz==2020.5
 sqlparse==0.4.1
+toml==0.10.2
+typing-extensions==3.7.4.3
+zipp==3.4.0
